# rust-professional-book

./: .gitignore  .textlintrc.json  FORMATTING.md  GETTING_STARTED.md  LICENSE  PROJECT_STATUS.md  README.md  dprint.json  lefthook.yml  package.json  prh.yml
.github/ISSUE_TEMPLATE/: chapter-task.md
.github/workflows/: build.yml
code-examples/chapter-01/benchmark-comparison/: benchmark_all.sh
code-examples/chapter-01/c-memory-leak/: dynamic_memory.c
code-examples/chapter-01/decision-framework/: Cargo.toml
code-examples/chapter-01/hands-on-01/: README.md
code-examples/chapter-01/java-gc-overhead/: GcBenchmark.java
code-examples/chapter-01/rust-ownership-demo/: Cargo.toml
code-examples/chapter-02/c-dangling-pointer/: main.c
code-examples/chapter-02/c-double-free/: main.c
code-examples/chapter-02/c-memory-leak/: main.c
code-examples/chapter-02/rust-affine-type-demo/: Cargo.toml
code-examples/chapter-02/rust-dangling-pointer-fail/: Cargo.toml
code-examples/chapter-02/rust-double-free-fail/: Cargo.toml
code-examples/chapter-03/dispatch-benchmark/: Cargo.toml
code-examples/chapter-11/pico-i2c-driver/: Cargo.toml
code-examples/chapter-11/pico-i2c-driver/src/: driver.rs  main.rs
code-examples/chapter-13/memory-profiler/: Cargo.toml
code-examples/chapter-13/memory-profiler/src/: main.rs
code-examples/chapter-13/memory-profiler/static/: app.js
docs/project-proposal/: oreilly-proposal.md
manuscript/outline/: book-outline.md
scripts/: format-all.sh  setup-tools.sh
tools/analytics/: progress-tracker.py
tools/converters/: zenn-converter.py
(+110 files in other folders)
