[package]
name = "pico-i2c-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.8.0"

# 組み込み開発で必要となる基本的なクレート
embedded-hal = "0.2.7"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

# 時間の単位を扱うためのクレート
fugit = "0.3.7"

# デバッグとパニック時のハンドリング用
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
