[package]
name = "memory-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `tower-http` は静的ファイルの配信に必要
tower-http = { version = "0.4", features = ["fs"] }
tower = { version = "0.4", features = ["util", "layer"] }
# トレース/ロギング用
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
